@@ -3,5 +3,6 @@ djangocanvas (0.1) unstable; urgency=low
   * @EWD-588 Initial commit;
   * @EWD-588 add support to vk.com authorization
   * @EWD-588 add tests, some fixes, update readme
+  * @EWD-588 add support for user notification
 
  -- Anton Volozhanin <zzzombat@gmail.com> Fri, 14 Dec 2012 16:13:40 +0400 
